{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 136,
  "lineage": "51a85367-b362-6060-0689-d680eb5428b3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:013900014319:vpc/vpc-ecead684",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-27e7b74f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-cb8299a3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-ecead684",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-c758aaac",
            "owner_id": "013900014319",
            "state": "available",
            "tags": {
              "Name": "DEFAULT"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b5297d565ef30a6",
            "arn": "arn:aws:ec2:ap-south-1:013900014319:instance/i-0ca04f3c60416520c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca04f3c60416520c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03affe133b87c7d1f",
            "private_dns": "ip-172-31-39-179.ap-south-1.compute.internal",
            "private_ip": "172.31.39.179",
            "public_dns": "ec2-52-66-209-175.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.209.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01a998a71534550ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d00326b8",
            "tags": {
              "Name": "APP-Servers",
              "type": "terraform-test-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-221a654d"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b5297d565ef30a6",
            "arn": "arn:aws:ec2:ap-south-1:013900014319:instance/i-0688eb84adbe95ae9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0688eb84adbe95ae9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0835bb88fad20031a",
            "private_dns": "ip-172-31-43-33.ap-south-1.compute.internal",
            "private_ip": "172.31.43.33",
            "public_dns": "ec2-15-206-166-144.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.166.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d619f474971cbc8f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Allow_Tomcat"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d00326b8",
            "tags": {
              "Name": "APP-Servers",
              "type": "terraform-test-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00a2dc3c5e0be1cf1"
            ]
          },
          "dependencies": [
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "applb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:loadbalancer/app/apploadbalancer/dbd505d8fe14aed1",
            "arn_suffix": "app/apploadbalancer/dbd505d8fe14aed1",
            "dns_name": "apploadbalancer-1094896262.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:loadbalancer/app/apploadbalancer/dbd505d8fe14aed1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apploadbalancer",
            "security_groups": [
              "sg-0e5c315d1935205fa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06528f7d"
              },
              {
                "subnet_id": "subnet-7ce96330"
              },
              {
                "subnet_id": "subnet-d00326b8"
              }
            ],
            "subnets": [
              "subnet-06528f7d",
              "subnet-7ce96330",
              "subnet-d00326b8"
            ],
            "vpc_id": "vpc-ecead684",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.albsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:listener/app/apploadbalancer/dbd505d8fe14aed1/48c07e4e2fa4baca",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:listener/app/apploadbalancer/dbd505d8fe14aed1/48c07e4e2fa4baca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:loadbalancer/app/apploadbalancer/dbd505d8fe14aed1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.applb",
            "aws_security_group.albsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "applr",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:targetgroup/app-target-group/f2e81643d94eca8b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:listener-rule/app/apploadbalancer/dbd505d8fe14aed1/48c07e4e2fa4baca/e69378f3a34f649a",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:listener-rule/app/apploadbalancer/dbd505d8fe14aed1/48c07e4e2fa4baca/e69378f3a34f649a",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:listener/app/apploadbalancer/dbd505d8fe14aed1/48c07e4e2fa4baca",
            "priority": 100
          },
          "dependencies": [
            "aws_lb.applb",
            "aws_lb_listener.http",
            "aws_lb_target_group.apptg",
            "aws_security_group.albsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apptg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:targetgroup/app-target-group/f2e81643d94eca8b",
            "arn_suffix": "targetgroup/app-target-group/f2e81643d94eca8b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:targetgroup/app-target-group/f2e81643d94eca8b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-ecead684"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app1tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:targetgroup/app-target-group/f2e81643d94eca8b-20200512143717363400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:targetgroup/app-target-group/f2e81643d94eca8b",
            "target_id": "i-0ca04f3c60416520c"
          },
          "dependencies": [
            "aws_instance.app1",
            "aws_lb_target_group.apptg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app2tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:targetgroup/app-target-group/f2e81643d94eca8b-20200512143729971400000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:013900014319:targetgroup/app-target-group/f2e81643d94eca8b",
            "target_id": "i-0688eb84adbe95ae9"
          },
          "dependencies": [
            "aws_instance.app2",
            "aws_lb_target_group.apptg",
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "albsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:013900014319:security-group/sg-0e5c315d1935205fa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5c315d1935205fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": null,
            "owner_id": "013900014319",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-ecead684"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:013900014319:security-group/sg-00a2dc3c5e0be1cf1",
            "description": "Allow Tomcat port inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a2dc3c5e0be1cf1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Ansible",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow_Tomcat",
            "name_prefix": null,
            "owner_id": "013900014319",
            "revoke_rules_on_delete": false,
            "tags": {
              "type": "terraform-test-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-ecead684"
          }
        }
      ]
    }
  ]
}